    - Now spawning a work/move/carry upgrader if storage and energy in storage < 20k
    - Will not spawn a mineral miner if conserving energy. Resulting from this, hauler is also normal size.
    - Counts towers as + 1000 work needed when generating builder bodies.
    - Fixed bug where multiple soldiers were spawning for assault missions.

    OUTPOSTS:

        - Fixed bug in finding distance to outpost sources.
        - Calls defender if hostile structure (Invader Core) spawns in room.
        - Now only finding new outposts in rooms that are not occupied (hostiles/reserved/owned)
        - Fixed bug where on memory reset more than max outposts could potentially be added.

    ROLES:

        Hauler:

            - Spawns units if more than 2 containers.
            - Units now only withdraw energy from source containers and deliver to spawn containers if there is no storage.

        Remote builder:

            - Units no longer clear assigned room when finished building. 
                Units focus on upgrading controller if no construction tasks available.

        Remote hauler:

            - Units now deliver to spawn containers if there is no storage present.

        Scout:

            - Now only targets rooms that a different scout is not going to.

        Defender:

            - Creep now uses ranged attack or heal when no healthy attack parts
            - Now attacks hostile structures.

    MANAGE CREEPS:

        - Withdraw tasks now require there to be at least some of the resource in the withdraw target store.         
        - Adjusted some parameters on withdraw and pickup tasks.
        - Seperated withdraw and pickup task finder by if or if not the task should fill the creeps inventory.


    EXPANSION MANAGER: 

        - Set max new outpost range to 1 when there is no storage present.
        - Now only declares new outposts for rooms that are not reserved by another player.  